[package]
name = "dstu8845"
version = "1.0.0"
edition = "2024"

[dependencies]
cipher = "0.5.0-rc.0"
zeroize = { version = "1.8.1", features = ["derive"], optional = true }

[features]
default = ["rand_core", "os_rng", "zeroize"]
rand_core = ["cipher/rand_core"]
os_rng = ["cipher/os_rng"]
zeroize = ["dep:zeroize", "cipher/zeroize"]
